# Community_FastSL

./: .gitignore  Ecoli_Bsubtlis_Fastsl_v2.csv  Ecoli_Salm_Tutorial.csv  README.md  pyproject.toml  requirement.txt
fastsl/: __init__.py  core.py
fastsl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: Bifidobacterium_longum_NCC_2705.xml  Clostridium_butyricum_DSM_10702.xml  Faecalibacterium_prausnitzii_A2_165.xml
notebooks/: FastSL_Workbench.ipynb  Tutorial.ipynb
notebooks/.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
